fix alignment

--- a/frontend/src/components/content-editor/content-editor.style.less
+++ b/frontend/src/components/content-editor/content-editor.style.less
@@ -16,27 +16,30 @@
 }
 
 .content-editor {
-  height: 80%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
+  height: 100%;
+  padding: 3rem 3rem;
 
-  button {
+  & > button {
     margin-top: 1rem;
+    display: block;
   }
   .ql-toolbar {
     width: 100%;
     border-top-left-radius: 0.5em;
     border-top-right-radius: 0.5em;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: baseline;
   }
 
   .quill {
-    height: 100%;
+    height: 95%;
     flex: 1;
     padding-bottom: 1rem;
 
     .ql-container {
-      height: 100%;
+      height: 95%;
+      max-height: 95%;
       width: 100%;
       border-bottom-left-radius: 0.5em;
       border-bottom-right-radius: 0.5em;
